--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -34,7 +34,7 @@
                         <div class="login-option">
                             <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in"
                                 data-toggle="modal" href="#user-register">Login / </a><span><a href="{% url 'registerUser'%}" class="cs-color cs-popup-joinus-btn login-popup ml-1"> Register</a></span><a class="get-start-btn"
-                                href="register-restaurant.html">
+                                href="{% url 'registerVendor'%}">
                                 Register
                                 Restaurant </a>
                         </div>
