--- a/foodOnline_main/static/css/custom.css
+++ b/foodOnline_main/static/css/custom.css
@@ -1,14 +1,40 @@
-@keyframes show-toast {
-    0% {bottom: -100%}
-    20% {bottom: 100px}
-    80% {bottom: 100px}
-    100% {bottom: -100px}
+.notifications-container {
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
 }
 
-.show-notification{
-    position: fixed;
-    bottom: 0%;
-    align-items: center;
-    animation-name: show-toast;
-    animation-duration: 5s;
+.notification {
+    animation: fadeIn 0.5s ease-out forwards, fadeOut 0.5s ease-out forwards 5s;
+    display: none;
+    opacity: 0;
+    position: relative;
+    max-width: 300px; /* Set the maximum width of the notification */
+    margin: 10px auto; /* Center the notification horizontally */
+    text-align: center; /* Center the text within the notification */
+}
+
+.notification.show {
+    display: block;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        display: none; /* Hide the notification after fading out */
+    }
 }
