--- a/templates/includes/alerts.html
+++ b/templates/includes/alerts.html
@@ -1,10 +1,9 @@
-{% if messages %}
-    {% for message in messages %}
-        <div class="alert alert-{{message.tags}} show-notification" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            {{message}}
-        </div>
-    {% endfor %}
-{% endif %}
+<div class="notifications-container">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="notification alert alert-{{ message.tags }} fade show" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+</div>
