--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -32,11 +32,13 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="login-option">
-                            <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in"
-                                data-toggle="modal" href="#user-register">Login / </a><span><a href="{% url 'registerUser'%}" class="cs-color cs-popup-joinus-btn login-popup ml-1"> Register</a></span><a class="get-start-btn"
-                                href="{% url 'registerVendor'%}">
-                                Register
-                                Restaurant </a>
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'myAccount' %}" class="cs-color cs-popup-joinus-btn login-popup ml-1">My Account</a>
+                                <a href="{% url 'logout' %}" class="cs-color cs-popup-joinus-btn login-popup ml-1 text-danger">Logout</a>
+                            {% else %}
+                                <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" href="{% url 'login'%}">Login / </a><span><a href="{% url 'registerUser'%}" class="cs-color cs-popup-joinus-btn login-popup ml-1"> Register</a></span><a class="get-start-btn"
+                                href="{% url 'registerVendor'%}"> Register Restaurant </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
