--- a/templates/accounts/forgotPassword.html
+++ b/templates/accounts/forgotPassword.html
@@ -16,15 +16,15 @@
             <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto; height: auto;">
               <div class="user-holder">
                 <h4 class="text-center" style="margin-bottom: 0">
-                  Login
+                  Forgot Password
                 </h4>
                 <p class="text-center">
-                  Order food from your favorite restaurants.
+                  Enter your email address to reset your password.
                 </p>
                 <hr />
                 <div id="restaurant-sets-holder">
                   <form class="form-fields-set foodbakery-dev-restaurant-form" method="post"
-                    action="{% url 'login' %}" enctype="multipart/form-data">
+                    action="{% url 'forgotPassword' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                       <li>
@@ -37,12 +37,6 @@
                                       <input type="email" name="email" id="" placeholder="Enter your email address">
                                     </div>
                                   </div>
-                                  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <div class="field-holder">
-                                      <label>Password</label>
-                                      <input type="password" name="password" id="" placeholder="Enter your password">
-                                    </div>
-                                  </div>
                             </div>
                           </div>
                         </div>
@@ -52,9 +46,8 @@
                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="field-holder">
                               <div class="payment-holder">
-                                <input type="submit" value="Login" id="btn-next-restaurant-information"
+                                <input type="submit" value="Continue" id="btn-next-restaurant-information"
                                   class="bgcolor" />
-                                <a href="{% url 'forgotPassword' %}" class="float-right bg-secondary px-2 py-1 text-light">Forgot your password?</a>
                               </div>
                             </div>
                           </div>
