--- a/foodOnline_main/static/css/custom.css
+++ b/foodOnline_main/static/css/custom.css
@@ -38,3 +38,10 @@
         display: none; /* Hide the notification after fading out */
     }
 }
+
+
+.btn.btn-info {
+    padding: 2px 1.75em;
+    font-size: 12px;
+    cursor: pointer;
+}
