Menu Builder - Category CRUD functionalities

--- a/templates/includes/vendor_sidebar.html
+++ b/templates/includes/vendor_sidebar.html
@@ -7,8 +7,8 @@
             <li class="{% if 'profile' in request.path %}active{% endif %}">
                 <a href="{% url 'vendorProfile' %}"><i class="icon-building"></i>My Restaurant</a>
             </li>
-            <li><a href="restaurant-menu-builder.html"><i class="icon-menu5"></i>Menu Builder</a></li>
-            <li><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
+            <li class="{% if 'vendor/menu-builder/' in request.path %}active{% endif %}"><a href="{% url 'vendorMenuBuilder'%}"><i class="icon-menu5"></i>Menu Builder</a></li>
+            <li ><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
             <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li>
             <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li>
             <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
