--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <link href="{% static 'css/style.css'%}" rel="stylesheet">
     <link href="{% static 'css/cs-foodbakery-plugin.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet">
 
