--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -1,6 +1,11 @@
 {% load static %}
 
-<div class="page-section restaurant-detail-image-section" style=" background: url({{vendor.user_profile.cover_photo.url}}) no-repeat scroll 0 0 / cover;">
+<div class="page-section restaurant-detail-image-section" style=" background: url(
+    {% if vendor.user_profile.cover_photo %}
+        {{ vendor.user_profile.cover_photo.url }}
+    {% else %}
+        {% static 'images/default-cover.png' %}
+    {% endif %}) no-repeat scroll 0 0 / cover;">
     <!-- Container Start -->
     <div class="container">
         <!-- Row Start -->
@@ -11,7 +16,11 @@
                     <div class="company-info">
                         <div class="img-holder">
                             <figure>
-                                <img src="{{vendor.user_profile.profile_picture.url }}" alt="">
+                                {% if vendor.user_profile.profile_picture %}
+                                    <img src="{{ vendor.user_profile.profile_picture.url }}" alt="">
+                                {% else %}
+                                    <img src="{% static 'images/default-profile.png' %}" alt="Default Profile Picture">
+                                {% endif %}
                             </figure>
                         </div>
 
@@ -19,7 +28,9 @@
                             <span class="restaurant-title">{{vendor.vendor_name}}</span>
                             <div class="text">
                                 <i class="icon-location"></i>
-                                <p>{{vendor.user_profile.address}}</p>
+                                {% if vendor.user_profile.address %}
+                                    <p>{{vendor.user_profile.address}}</p>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
