--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -32,6 +32,12 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="login-option">
+                            {% if user.is_authenticated %}
+                            <a href="" class="mx-5">
+                                <i class="fa fa-shopping-cart text-danger" style="font-size: 20px"></i>
+                                <span class="badge badge-warning" id="cart-counter" style="border-radius: 100%; padding-left: 7px; padding-right: 7px; padding-top: 5px; padding-bottom: 5px; position: relative; bottom: 10px; left: -5px;">{{cart_counter}}</span>
+                            </a>
+                            {% endif %}
                             <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
                             {% if user.is_authenticated %}
                                 <a href="{% url 'myAccount' %}" class="cs-color cs-popup-joinus-btn login-popup ml-1">My Account</a>
