--- a/templates/marketplace/vendorDeatils.html
+++ b/templates/marketplace/vendorDeatils.html
@@ -119,7 +119,9 @@
                                                     </div>
                                                     <div class="price-holder">
                                                         <span class="price">Rs. {{food.price}}</span>
-                                                        <a href="#" class="restaurant-add-menu-btn"><i class="icon-plus4 text-color"></i></a>
+                                                        <a href="#" class="decrease_cart" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
+                                                        <label for="" id="quantity-{{food.id}}">0</label>
+                                                        <a href="#" class="increase_cart add_to_cart" data-id="{{food.id}}" data-url="{% url 'addToCart' food.id %}"><i class="icon-plus4 text-color"></i></a>
                                                         <span id="add-menu-loader-10"></span>
                                                     </div>
                                                 </li>
@@ -128,6 +130,9 @@
                                             {% endfor %}
                                             
                                         </div>
+                                        {% for item in cart_items %}
+                                        <label for="" id="quantity-{{item.fooditem.id}}" class="item_quantity d-none" data-quantity="{{item.quantity}}">{{item.quantity}}</label>
+                                        {% endfor %}
                                     </div>
                                 </div>
                                 
